# GPULang

./: .gitignore  CMakeLists.txt  README.md  fips-include.cmake  fips.yml
code/: CMakeLists.txt
code/api/: CMakeLists.txt  loader.cc  loader.h
code/api/reflection/: program.h  structure.h  variable.h
code/api/reflection/vk/: pipelineassembly.cc  pipelineassembly.h
code/app/: CMakeLists.txt  main.cc  stb_image.h
code/app/shaders/: basicgraphics.gplb  basicgraphics.h  break.gplb  breaktest.gplb  computewithimagestore.gplb  computewithimagestore.h  computewithstore.gplb  computewithstore.h  explicitreturn.gplb  for.gplb  fortest.gplb  if.gplb  iftest.gplb  nested.gplb  switch.gplb  switchtest.gplb  typeinference.gplb  typeinferrence.gplb  while.gplb  whiletest.gplb
code/application/: CMakeLists.txt  shadercompilerapp.cc  singleshadercompiler.cc
code/compiler/: CMakeLists.txt  compiler.cc  compiler.h  gpulangcompiler.cc  gpulangcompiler.h
code/compiler/ast/: alias.cc  alias.h  annotation.h  attribute.h  effect.cc  effect.h  enumeration.cc  enumeration.h  function.cc  function.h  generate.cc  generate.h  intrinsics.cc  intrinsics.h  preprocessor.cc  preprocessor.h  program.cc  program.h  renderstate.cc  renderstate.h  samplerstate.cc  samplerstate.h  state.cc  state.h  structure.cc  structure.h  symbol.cc  symbol.h  variable.cc  variable.h
code/compiler/ast/expressions/: accessexpression.cc  accessexpression.h  arrayindexexpression.cc  arrayindexexpression.h  arrayinitializerexpression.cc  arrayinitializerexpression.h  binaryexpression.cc  binaryexpression.h  boolexpression.cc  boolexpression.h  boolvecexpression.cc  boolvecexpression.h  callexpression.cc  callexpression.h  commaexpression.cc  commaexpression.h  declaredexpression.cc  declaredexpression.h  enumexpression.cc  enumexpression.h  expression.cc  expression.h  floatexpression.cc  floatexpression.h  floatvecexpression.cc  floatvecexpression.h  initializerexpression.cc  initializerexpression.h  intexpression.cc  intexpression.h  intvecexpression.cc  intvecexpression.h  stringexpression.cc  stringexpression.h  symbolexpression.cc  symbolexpression.h  ternaryexpression.cc  ternaryexpression.h  uintexpression.cc  uintexpression.h  (+4 more)
code/compiler/ast/statements/: breakstatement.cc  continuestatement.cc  discardstatement.cc  expressionstatement.cc  expressionstatement.h  forstatement.cc  forstatement.h  ifstatement.cc  returnstatement.cc  returnstatement.h  scopestatement.cc  scopestatement.h  statement.h  switchstatement.cc  switchstatement.h  terminatestatement.cc  terminatestatement.h  whilestatement.cc  whilestatement.h
code/compiler/ast/types/: bool.cc  bool.h  bool2.cc  bool2.h  bool3.cc  bool3.h  bool4.cc  bool4.h  builtins.cc  builtins.h  float.cc  float.h  float2.cc  float2.h  float3.cc  float3.h  float4.cc  float4.h  functiontype.cc  functiontype.h  int.cc  int.h  int2.cc  int2.h  int3.cc  int3.h  int4.cc  int4.h  mat2x2.cc  mat2x2.h  mat2x3.cc  mat2x3.h  mat2x4.cc  mat2x4.h  mat3x2.cc  mat3x2.h  mat3x3.cc  mat3x3.h  mat3x4.cc  mat3x4.h  (+24 more)
code/compiler/ext/: generateparser.sh
code/compiler/ext/antlr4/grammar/: AnyFX.g4  GPULang.g4
code/compiler/ext/mcpp/: system.c
code/compiler/generation_scripts/: intrinsics.js  swizzle.py  syntax.js  type_gen.py
code/compiler/generators/: NewFile1.txt  generator.cc  generator.h  glslgenerator.cc  glslgenerator.h  hgenerator.cc  hgenerator.h  hlslgenerator.h  spirvgenerator.cc  spirvgenerator.h  wgslgenerator.h
code/compiler/generators/reflection/: hgenerator.cc  hgenerator.h  jsgenerator.h
code/compiler/language_server/: GPULangLexer.tokens  GPULangLexer.ts  GPULangListener.ts  GPULangParser.ts
code/compiler/parser/: lexer.cc  lexer.h  parser.cc  parser.h
code/compiler/parser4/: AnyFXBaseListener.h  AnyFXLexer.cpp  AnyFXLexer.h  AnyFXListener.h  AnyFXParser.cpp  AnyFXParser.h  GPULang.interp  GPULang.tokens  GPULangBaseListener.cpp  GPULangBaseListener.h  GPULangBaseVisitor.cpp  GPULangBaseVisitor.h  GPULangLexer.cpp  GPULangLexer.h  GPULangLexer.interp  GPULangLexer.tokens  GPULangLexer.ts  GPULangListener.cpp  GPULangListener.h  GPULangListener.ts  GPULangParser.cpp  GPULangParser.h  GPULangParser.ts  gpulangastconstructor.cpp  gpulangastconstructor.h  gpulangerrorhandlers.cpp  gpulangerrorhandlers.h  gpulangtoken.cpp  gpulangtoken.h  gpulangvisitor.cpp  gpulangvisitor.h
code/compiler/v3/: compiler.cc  compiler.h
code/compiler/v3/ast/: alias.cc  alias.h  annotation.h  attribute.h  enumeration.cc  enumeration.h  function.cc  function.h  intrinsics.cc  intrinsics.h  program.cc  program.h  renderstate.cc  renderstate.h  samplerstate.cc  samplerstate.h  state.cc  structure.cc  structure.h  symbol.cc  symbol.h  variable.cc  variable.h
code/compiler/v3/ast/expressions/: accessexpression.cc  accessexpression.h  (+32 more)
code/compiler/v3/generators/: generator.cc  generator.h  glslgenerator.cc  glslgenerator.h  hgenerator.cc  hgenerator.h  llvmgenerator.cc  llvmgenerator.h  spirvgenerator.cc  spirvgenerator.h
code/compiler/v3/validators/: validator.cc  validator.h
code/compiler/validators/: validator.cc  validator.h
code/test/: CMakeLists.txt  completeshadertest.cc  main.cc
code/test/shaders/: accesstest.gpul  arrayinitializer.gpul  atomics.gpul  basicgraphics.gpul  bindlessgraphics.gpul  break.gpul  breaktest.gpul  completeshader.fx  completeshader.gpul  computewithimagestore.gpul  computewithstore.gpul  explicitreturn.gpul  explicitreturntest.gpul  for.gpul  fortest.gpul  if.gpul  iftest.gpul  include.gpuh  nested.gpul  nestedtest.gpul  switch.gpul  switchtest.gpul  typeinference.gpul  while.gpul  whiletest.gpul
code/util/: CMakeLists.txt  binreader.cc  binreader.h  binwriter.cc  binwriter.h  cmdlineargs.cc  cmdlineargs.h  containers.cc  containers.h  memory.cc  memory.h  serialize.h  shaderusage.h  string_utils.h  strings.h  textwriter.cc  textwriter.h  thread.h  types.h  util.h
gpulangcompiler/: CMakeLists.txt  build-macos.sh  build.bat  build.sh  shaderc.cc  shadercompilerapp.cc  shadercompilerapp.h  singleshadercompiler.cc  singleshadercompiler.h
(+138 files in other folders)
